# -orporate_system

./: README.md
ADR/: choosing_the_project_structure.md  choosing_the_way_microservices_interact.md  chose_framework.md
auth/: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
auth/app/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
auth/app/routers/: auth.py  users.py
