[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Auth service using FastAPI"
authors = ["Korovyakovskiy ND"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
